fix css overlap with application and sessions

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,6 @@
  *= require sessions
  */
 
-body {
-  /* border: 1px solid black; */
- /* background-image: linear-gradient(to bottom right, silver, gray); */
- /* background-attachment: fixed; */
-}
-
 .wrapper{
   /* border: 1px solid black; */
   /* display: grid; */
@@ -144,4 +138,8 @@ ul {
   padding: 20px;
   font-size: 18px;
   background-color: white
+}
+
+.instrument:hover {
+ border: 5px solid blue
 }
